[project]
name = "projeto-cep"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Loredo",email = "gustavoloredocosta@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
