[tool.poetry]
name = "projeto-cep"
version = "0.1.0"
description = ""
authors = ["Gustavo Loredo <gustavoloredocosta@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = "^1.54.0"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"